putting homework into github

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 
-    <title>Graphic title here</title><?php /* EDIT ME */ ?>
+    <title>Kurt Schaefer Donations</title><?php?>
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -24,11 +24,11 @@
                 <div class="social-links col-md-12"></div>
                 <div class="col-md-12">
 
-                    <h1>I Am a Journalist and Programmer</h1>
-                    <div class="byline">By <a href="#">Your Name Here, Esq.</a></div>
+                    <h1>Donations Made To Elect Kurt Schaefer</h1>
+                    <div class="byline">By <a href ="https://www.shelby-mann.com " target="_blank">Shelby Mann</a></div>
 
                     <div class="meta">
-                        Published Jan. 1 2016
+                        Published March 3, 2016
                     </div>
                 </div>
             </header>
@@ -36,11 +36,25 @@
             <section class="row">
 
             <div class="col-md-12 chart">
-                <h3>Chart Subtitle Here</h3>
+                <h3>All donations supporting Kurt Schaefer's election as Attorney General of Missouri</h3>
+                
+                <table class="donations table">
+                    <thead>
+                        <tr>
+                            <th>Contribution Date</th>
+                            <th>Contribution Information</th>
+                            <th class='amount'>Amount</th>
+                        </tr>
+                    </thead>
+                    <tbody class="tbody">
+                        <!-- chart will go here-->
+                    </tbody>
+                </table>
+                
                 <!--
                     1. Create an empty table with two class names: "donations" and "table"
                     2. Create three table columns in the table head (thead): "Date", "Info" and "Amount"
-                    2. Us your script.js file to populate the table body (tbody) with values from the contributions data. 
+                    2. Use your script.js file to populate the table body (tbody) with values from the contributions data. 
                     3. Use CSS to right align the dollar amounts.
                     4. Title your page appropriately and add your byline.
                 -->
@@ -50,7 +64,7 @@
             </section>
 
             <footer>
-                <div id="source-line">Source: Source goes here.</div>
+                <div id="source-line">Source: <a href ="http://www.mec.mo.gov/" target="_blank">Missouri Ethics Commission</a></div>
             </footer>
 
         </div>
