--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="col-md-12">
 
                     <h1>Donations Made To Elect Kurt Schaefer</h1>
-                    <div class="byline">By <a href ="https://www.shelby-mann.com " target="_blank">Shelby Mann</a></div>
+                    <div class="byline">By <a href ="http://www.shelby-mann.com " target="_blank">Shelby Mann</a></div>
 
                     <div class="meta">
                         Published March 3, 2016
