added clarification to subtitle

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <section class="row">
 
             <div class="col-md-12 chart">
-                <h3>All donations supporting Kurt Schaefer's campaign for Attorney General of Missouri</h3>
+                <h3>All donations greater than $5,000 supporting Kurt Schaefer's campaign for Attorney General of Missouri</h3>
                 
                 <table class="donations table">
                     <thead>
